--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  font-size: 16px; /* Set a base font size */
+  line-height: 1.5; /* Set a base line height */
+  margin: 0;
+  padding: 20px;
+  font-family: 'Arial', sans-serif; /* Choose a font family */
+}
+
 #gastenboek{
   font-size: 50px;
   text-align: center;
@@ -19,7 +27,6 @@
     flex-direction: row;
 
   }
-
 
   .navigationbar > li {
     display: flex;
@@ -138,3 +145,68 @@
     background: #291980;
   }
 
+  .particles_index.html {
+    position: relative;
+    width: 100%; /* Adjust the width as needed */
+    height: auto;
+    margin: auto;
+    display: grid;
+    overflow: hidden;
+}
+
+#particles {
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-height: 600px;
+    object-fit: cover;
+    filter: brightness(40%);
+}
+
+.overlay-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+    
+}
+
+
+.textarea{
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+
+  top: px; /* Adjust the distance from the top */
+  left: 570px; /* Adjust the distance from the left */
+  border: 10px solid #686565; 
+  padding: 20px;
+  border-radius: 30px;
+  background-color: #817c7c;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+#particles_text{
+  color: rgb(42, 48, 48);
+  font-size: 50px;
+  
+}
+
+.particles_text2 {
+  text-align: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: larger;
+  color: #ffffff;
+  position: relative;
+  bottom: 750px;
+  margin-top: 180px;
+  padding: 10%;
+}
+
+#tekstmessages{
+
+  margin-left: 200px;
+}
